--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
                     <div class="dark-overlay">
                     <img src="img/pexels-photo-1667580.jpeg" alt="recipe1.jpg" class="b-block w-100">
                     </div>
-                    <div class="carousel-caption  d-sm-block text-center mb-5"> 
+                    <div class="carousel-caption  d-sm-block text-center mb-3"> 
                     
-                        <h2 class="mb-5">We Love Delicious Foods one</h2>
-                        <p class="m-5">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi sit dignissimos nam repudiandae. Quas, aut magni commodi animi similique eaque.</p>
+                        <h2 class="display-6 mb-2">We Love Delicious Foods one</h2>
+                        <p class="m-2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi sit dignissimos nam repudiandae. Quas, aut magni commodi animi similique eaque.</p>
                         <div class="row">
                                 <div class="col-4">
                                     <img src="img/pexels-photo-725997.jpeg" alt="" class="w-50 rounded-circle m-1">
@@ -66,9 +66,9 @@
                  </div>
                 <div class="carousel-item  ">
                     <img src="img/pexels-photo-255501.jpeg" alt="recipe2.jpg" class="b-block w-100">
-                    <div class="carousel-caption  d-sm-block text-center mb-5"> 
-                            <h2 class="mb-2">We Love Delicious Foods two</h2>
-                            <p class="m-5">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi sit dignissimos nam repudiandae. Quas, aut magni commodi animi similique eaque.</p>
+                    <div class="carousel-caption  d-sm-block text-center mb-3"> 
+                            <h2 class=" display-6 mb-2">We Love Delicious Foods two</h2>
+                            <p class="m-2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi sit dignissimos nam repudiandae. Quas, aut magni commodi animi similique eaque.</p>
                           
                             <div class="row">
                                 <div class="col-4">
