--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                 }
 
                 // This is where we use the function to detect if ".box2" is scrolled into view, and when it is add the class ".animated" to the <p> child element
-                if (elementScrolled('#restaurant-video')) {
+                if (elementScrolled('#resutarant-info')) {
 
                     $('#new-odo').html(20000);
                     $('#odo-project').html(658);
