added menu section

--- a/index.html
+++ b/index.html
@@ -151,6 +151,272 @@
         </div>
     </section>
 
+    <!-- Specialties menu -->
+    <section id="ourMenu">
+        <div class="container">
+            <div class="lobster mt-5 text-danger text-center">Specialties</div>
+            <div class="m-0 text-center custom-font">Our Menu</div>
+            <div class="row">
+                <div class="col-md-4 ">
+                    <h4 class="text-center mb-5">Breakfast</h4>
+                    <div class="row">
+                        <div class="col-3">
+                            <img src="./img/salmon-dish-food-meal-46239.jpeg" alt="" class="rounded-circle w-100">
+                        </div>
+                        <div class="col-7">
+                            <p>Mash Potatoes with bean</p>
+                            <p class="text-muted">Potates,rice,tomatoes</p>
+                        </div>
+                        <div class="col-2">
+                            <h4>£10</h4>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <div class="col-3">
+                            <img src="./img/salmon-dish-food-meal-46239.jpeg" alt="" class="rounded-circle w-100">
+                        </div>
+                        <div class="col-7">
+                            <p>Mash Potatoes with bean</p>
+                            <p class="text-muted">Potates,rice,tomatoes</p>
+                        </div>
+                        <div class="col-1">
+                            <h4>£10</h4>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <div class="col-3">
+                            <img src="./img/salmon-dish-food-meal-46239.jpeg" alt="" class="rounded-circle w-100">
+                        </div>
+                        <div class="col-7">
+                            <p>Mash Potatoes with bean</p>
+                            <p class="text-muted">Potates,rice,tomatoes</p>
+                        </div>
+                        <div class="col-1">
+                            <h4>£10</h4>
+                        </div>
+                    </div>
+                    <hr>
+                </div>
+                <div class="col-md-4">
+                    <h4 class="text-center mb-5">Lunch</h4>
+                    <div class="row">
+                        <div class="col-3">
+                            <img src="./img/salmon-dish-food-meal-46239.jpeg" alt="" class="rounded-circle w-100">
+                        </div>
+                        <div class="col-7">
+                            <p>Mash Potatoes with bean</p>
+                            <p class="text-muted">Potates,rice,tomatoes</p>
+                        </div>
+                        <div class="col-2">
+                            <h4>£10</h4>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <div class="col-3">
+                            <img src="./img/salmon-dish-food-meal-46239.jpeg" alt="" class="rounded-circle w-100">
+                        </div>
+                        <div class="col-7">
+                            <p>Mash Potatoes with bean</p>
+                            <p class="text-muted">Potates,rice,tomatoes</p>
+                        </div>
+                        <div class="col-1">
+                            <h4>£10</h4>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <div class="col-3">
+                            <img src="./img/salmon-dish-food-meal-46239.jpeg" alt="" class="rounded-circle w-100">
+                        </div>
+                        <div class="col-7">
+                            <p>Mash Potatoes with bean</p>
+                            <p class="text-muted">Potates,rice,tomatoes</p>
+                        </div>
+                        <div class="col-1">
+                            <h4>£10</h4>
+                        </div>
+                    </div>
+                    <hr>
+                </div>
+                <div class="col-md-4 ">
+                    <h4 class="text-center mb-5">Dinner</h4>
+                    <div class="row">
+                        <div class="col-3">
+                            <img src="./img/salmon-dish-food-meal-46239.jpeg" alt="" class="rounded-circle w-100">
+                        </div>
+                        <div class="col-7">
+                            <p>Mash Potatoes with bean</p>
+                            <p class="text-muted">Potates,rice,tomatoes</p>
+                        </div>
+                        <div class="col-2">
+                            <h4>£10</h4>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <div class="col-3">
+                            <img src="./img/salmon-dish-food-meal-46239.jpeg" alt="" class="rounded-circle w-100">
+                        </div>
+                        <div class="col-7">
+                            <p>Mash Potatoes with bean</p>
+                            <p class="text-muted">Potates,rice,tomatoes</p>
+                        </div>
+                        <div class="col-1">
+                            <h4>£10</h4>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <div class="col-3">
+                            <img src="./img/salmon-dish-food-meal-46239.jpeg" alt="" class="rounded-circle w-100">
+                        </div>
+                        <div class="col-7">
+                            <p>Mash Potatoes with bean</p>
+                            <p class="text-muted">Potates,rice,tomatoes</p>
+                        </div>
+                        <div class="col-1">
+                            <h4>£10</h4>
+                        </div>
+                    </div>
+                    <hr>
+                </div>
+            </div>
+            <div class="row mt-5">
+                <div class="col-md-4 ">
+                    <h4 class="text-center mb-5">Desserts</h4>
+                    <div class="row">
+                        <div class="col-3">
+                            <img src="./img/salmon-dish-food-meal-46239.jpeg" alt="" class="rounded-circle w-100">
+                        </div>
+                        <div class="col-7">
+                            <p>Mash Potatoes with bean</p>
+                            <p class="text-muted">Potates,rice,tomatoes</p>
+                        </div>
+                        <div class="col-2">
+                            <h4>£10</h4>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <div class="col-3">
+                            <img src="./img/salmon-dish-food-meal-46239.jpeg" alt="" class="rounded-circle w-100">
+                        </div>
+                        <div class="col-7">
+                            <p>Mash Potatoes with bean</p>
+                            <p class="text-muted">Potates,rice,tomatoes</p>
+                        </div>
+                        <div class="col-1">
+                            <h4>£10</h4>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <div class="col-3">
+                            <img src="./img/salmon-dish-food-meal-46239.jpeg" alt="" class="rounded-circle w-100">
+                        </div>
+                        <div class="col-7">
+                            <p>Mash Potatoes with bean</p>
+                            <p class="text-muted">Potates,rice,tomatoes</p>
+                        </div>
+                        <div class="col-1">
+                            <h4>£10</h4>
+                        </div>
+                    </div>
+                    <hr>
+                </div>
+                <div class="col-md-4">
+                    <h4 class="text-center mb-5">Wine Card</h4>
+                    <div class="row">
+                        <div class="col-3">
+                            <img src="./img/salmon-dish-food-meal-46239.jpeg" alt="" class="rounded-circle w-100">
+                        </div>
+                        <div class="col-7">
+                            <p>Mash Potatoes with bean</p>
+                            <p class="text-muted">Potates,rice,tomatoes</p>
+                        </div>
+                        <div class="col-2">
+                            <h4>£10</h4>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <div class="col-3">
+                            <img src="./img/salmon-dish-food-meal-46239.jpeg" alt="" class="rounded-circle w-100">
+                        </div>
+                        <div class="col-7">
+                            <p>Mash Potatoes with bean</p>
+                            <p class="text-muted">Potates,rice,tomatoes</p>
+                        </div>
+                        <div class="col-1">
+                            <h4>£10</h4>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <div class="col-3">
+                            <img src="./img/salmon-dish-food-meal-46239.jpeg" alt="" class="rounded-circle w-100">
+                        </div>
+                        <div class="col-7">
+                            <p>Mash Potatoes with bean</p>
+                            <p class="text-muted">Potates,rice,tomatoes</p>
+                        </div>
+                        <div class="col-1">
+                            <h4>£10</h4>
+                        </div>
+                    </div>
+                    <hr>
+                </div>
+                <div class="col-md-4 ">
+                    <h4 class="text-center mb-5">Drinks</h4>
+                    <div class="row">
+                        <div class="col-3">
+                            <img src="./img/salmon-dish-food-meal-46239.jpeg" alt="" class="rounded-circle w-100">
+                        </div>
+                        <div class="col-7">
+                            <p>Mash Potatoes with bean</p>
+                            <p class="text-muted">Potates,rice,tomatoes</p>
+                        </div>
+                        <div class="col-2">
+                            <h4>£10</h4>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <div class="col-3">
+                            <img src="./img/salmon-dish-food-meal-46239.jpeg" alt="" class="rounded-circle w-100">
+                        </div>
+                        <div class="col-7">
+                            <p>Mash Potatoes with bean</p>
+                            <p class="text-muted">Potates,rice,tomatoes</p>
+                        </div>
+                        <div class="col-1">
+                            <h4>£10</h4>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <div class="col-3">
+                            <img src="./img/salmon-dish-food-meal-46239.jpeg" alt="" class="rounded-circle w-100">
+                        </div>
+                        <div class="col-7">
+                            <p>Mash Potatoes with bean</p>
+                            <p class="text-muted">Potates,rice,tomatoes</p>
+                        </div>
+                        <div class="col-1">
+                            <h4>£10</h4>
+                        </div>
+                    </div>
+                    <hr>
+                </div>
+            </div>
+        </div>
+        <div class=" m-5 text-center">
+        <button class="btn btn-dark border-0 ">View All Menu</button>
+        </div>
+    </section>
 
 
 
@@ -171,7 +437,6 @@
             $('#w-days').html(450);
 
         });
-       
     </script>
 </body>
 
