--- a/index.html
+++ b/index.html
@@ -431,17 +431,23 @@
                     <div class="slider">
                         <div>
                             <img src="./img/adult-beard-boy-220453.jpg" alt="" class="quote-img rounded-circle mx-auto">
-                            <p class="my-4">Cusisine has the friendliest staff! They're very attentive and great at offering suggestions if you can't decide what to order. I ordered the penne pasta with artichokes and was pleasantly surprised by how creamy and delicious the sauce was. Plus the portions were quite large, especially for the price. I'll definitely go back soon</p>
+                            <p class="my-4">Cusisine has the friendliest staff! They're very attentive and great at
+                                offering suggestions if you can't decide what to order. I ordered the penne pasta with
+                                artichokes and was pleasantly surprised by how creamy and delicious the sauce was. Plus
+                                the portions were quite large, especially for the price. I'll definitely go back soon</p>
                             <p class="my-4">Jone doe</p>
                         </div>
                         <div>
                             <img src="./img/pexels-photo-736716.jpeg" alt="" class="quote-img rounded-circle mx-auto">
-                            <p class="my-4">Outstanding restaurant. Great quality without the prices of other restaurants of comparable quality. The staff is always pleasant as wel</p>
+                            <p class="my-4">Outstanding restaurant. Great quality without the prices of other
+                                restaurants of comparable quality. The staff is always pleasant as wel</p>
                             <p class="my-4">Jone doe</p>
                         </div>
                         <div>
                             <img src="./img/adult-beard-boy-220453.jpg" alt="" class="quote-img rounded-circle mx-auto">
-                            <p class="my-4">Fantastic: as far as good goes it doesnt get much better. Why go out and spend 200 for 2 when you can spend sixty for the same quality. Their specials are to die for and its a very warm and friendly place to eat.</p>
+                            <p class="my-4">Fantastic: as far as good goes it doesnt get much better. Why go out and
+                                spend 200 for 2 when you can spend sixty for the same quality. Their specials are to
+                                die for and its a very warm and friendly place to eat.</p>
                             <p class="my-4">Jone doe</p>
                         </div>
                     </div>
@@ -449,6 +455,180 @@
             </div>
         </div>
     </section>
+    <!-- mastechef -->
+    <section id="chef">
+        <div class="lobster mt-5 text-danger text-center">chef</div>
+        <div class="m-3  text-center h4">Our Master Chef</div>
+        <div class="container">
+            <div class="row">
+
+                <div class="col-md-3 ">
+                    <img src="./img/chef1.jpg" alt="" class="w-100">
+                    <h6 class="text-center mt-4">Jone Doe</h6>
+                    <div class="text-center mt-1 text-muted">CEO, Co founder</div>
+                    <div class="text-center text-danger">
+                        <i class="fab fa-twitter fa-2x  "></i>
+                        <i class="fab fa-facebook-square fa-2x  "></i>
+                        <i class="fab fa-instagram fa-2x     "></i>
+                    </div>
+                </div>
+                <div class="col-md-3 ">
+                    <img src="./img/chef2.jpg" alt="" class="w-100 ">
+                    <h6 class="text-center mt-3">Jone Doe</h6>
+                    <div class="text-center mt-1 text-muted">Head chef</div>
+                    <div class="text-center text-danger">
+                        <i class="fab fa-twitter fa-2x  "></i>
+                        <i class="fab fa-facebook-square fa-2x  "></i>
+                        <i class="fab fa-instagram fa-2x     "></i>
+                    </div>
+                </div>
+                <div class="col-md-3 ">
+                    <img src="./img/chef3.jpg" alt="" class="w-100 ">
+                    <h6 class="text-center mt-3">Jone Doe</h6>
+                    <div class="text-center mt-1 text-muted">chef</div>
+                    <div class="text-center text-danger">
+                        <i class="fab fa-twitter fa-2x  "></i>
+                        <i class="fab fa-facebook-square fa-2x  "></i>
+                        <i class="fab fa-instagram fa-2x     "></i>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <img src="./img/chef-4.jpg" alt="" class="w-100 ">
+                    <h6 class="text-center mt-3">Jane Doe</h6>
+                    <div class="text-center mt-1 text-muted">chef</div>
+                    <div class="text-center text-danger">
+                        <i class="fab fa-twitter fa-2x  "></i>
+                        <i class="fab fa-facebook-square fa-2x  "></i>
+                        <i class="fab fa-instagram fa-2x     "></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="makereservation">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <img src="img/cooking-eat-cut-food.jpg" alt="" class="chef-img">
+                </div>
+                <div class="col-md-6">
+                    <div class="lobster mt-5 text-danger ">Book a Table</div>
+                    <div class="h4">Make Reservation</div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label for="">Name</label>
+                                <input type="text" class="form-control" name="" id="" aria-describedby="helpId"
+                                    placeholder="Your Name">
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label for="">Email</label>
+                                <input type="text" class="form-control" name="" id="" aria-describedby="helpId"
+                                    placeholder="Your Email">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label for="">phone</label>
+                                <input type="text" class="form-control" name="" id="" aria-describedby="helpId"
+                                    placeholder="Phone">
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label for="">Date</label>
+                                <input type="text" class="form-control" name="" id="" aria-describedby="helpId"
+                                    placeholder="Your Date">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label for="">Time</label>
+                                <input type="text" class="form-control" name="" id="" aria-describedby="helpId"
+                                    placeholder="Time">
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label for="">Person</label>
+                                <input type="text" class="form-control" name="" id="" aria-describedby="helpId"
+                                    placeholder="How many person">
+                            </div>
+                        </div>
+                    </div>
+                    <button class="btn btn-danger border-0">Make a Reservation</button>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer id="main-footer" class="text-left p-4 m-auto">
+
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <h4>Cuisine</h3>
+                        <p class="text-muted">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, eligendi.
+                        </p>
+                        <div class=" text-white ">
+                            <i class="fab fa-twitter fa-2x  "></i>
+                            <i class="fab fa-facebook-square fa-2x  "></i>
+                            <i class="fab fa-instagram fa-2x     "></i>
+                        </div>
+                </div>
+                <div class="col-md-4">
+                    <h4>Opening hours</h4>
+                    <div class="row text-muted">
+                        <div class="col">Monday</div>
+                        <div class="col">9.00-24.00</div>
+                    </div>
+                    <div class="row text-muted">
+                        <div class="col">Tuesday</div>
+                        <div class="col">9.00-24.00</div>
+                    </div>
+                    <div class="row text-muted">
+                        <div class="col">Wednesday</div>
+                        <div class="col">9.00-24.00</div>
+                    </div>
+                    <div class="row text-muted">
+                        <div class="col">Thursday</div>
+                        <div class="col">9.00-24.00</div>
+                    </div>
+                    <div class="row text-muted">
+                        <div class="col">Friday</div>
+                        <div class="col">9.00-24.00</div>
+                    </div>
+                    <div class="row text-muted">
+                        <div class="col">Saturday</div>
+                        <div class="col">9.00-24.00</div>
+                    </div>
+                    <div class="row text-muted">
+                        <div class="col">Sunday</div>
+                        <div class="col">closed</div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <h4>Newsletter</h4>
+                    <p class="text-muted">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, aspernatur.
+                    </p>
+                    <button class="btn btn-light btn-block">Email Address</button>
+                    <button class="btn btn-danger btn-block">Subscribe</button>
+                </div>
+            </div>
+            <div class="row mt-5">
+                <div class="col text-center">
+                    <p>Copyright &copy;<span id="year"></span> Cuisine</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
         crossorigin="anonymous"></script>
@@ -477,9 +657,11 @@
         $('.slider').slick({
             dots: true,
             infinite: true,
-            speed: 3000,
+            speed: 1000,
             slidesToShow: 1,
-            adaptiveHeight: true
+            adaptiveHeight: true,
+            autoplay: true,
+            autoplaySpeed: 3000,
         });
     </script>
 </body>
